// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders KuiFieldGroup 1`] = `
<div
  aria-label="aria-label"
  class="kuiFieldGroup testClass1 testClass2"
  data-test-subj="test subject string"
>
  children
</div>
`;

exports[`renders KuiFieldGroup isAlignedTop 1`] = `
<div
  aria-label="aria-label"
  class="kuiFieldGroup testClass1 testClass2 kuiFieldGroup--alignTop"
  data-test-subj="test subject string"
>
  children
</div>
`;
